# byedpi

./: .gitignore  Cargo.toml  Dockerfile  Makefile  PROMPT.md  README.md  app.h  conev.c  desync.c  desync.h  extend.c  main.c  mpool.c  packets.c  proxy.c  proxy.h  ralph.yml  skills-lock.json
.agents/skills/: AGENTS.md
.github/workflows/: ci.yml
crates/ciadpi-bin/: Cargo.toml
crates/ciadpi-bin/src/: main.rs  process.rs  runtime.rs  runtime_policy.rs
crates/ciadpi-bin/src/platform/: fallback.rs  linux.rs  mod.rs  stub.rs  windows.rs
crates/ciadpi-bin/tests/: cli.rs  runtime_integration.rs
crates/ciadpi-config/: Cargo.toml
crates/ciadpi-config/src/: lib.rs
crates/ciadpi-config/tests/: oracle_diff.rs
crates/ciadpi-desync/: Cargo.toml
crates/ciadpi-desync/src/: lib.rs
crates/ciadpi-desync/tests/: action_planning.rs  oracle_diff.rs
crates/ciadpi-packets/: Cargo.toml
crates/ciadpi-packets/src/: lib.rs
crates/ciadpi-session/: Cargo.toml
scripts/: ralph-loop  ralph-rust-migration
tests/: coverage_map.md  fuzz_packets.c  generate_packets_corpus.py  oracle_common.c  oracle_common.h  oracle_config.c  oracle_desync.c  oracle_packets.c  oracle_protocol.c  packets_exercise.c  packets_exercise.h  rust_packet_seeds.rs  test_auto_runtime.py  test_contract.py  test_desync_runtime.py  test_install_cutover.py  test_linux_routed_runtime.py  test_linux_runtime_features.py  test_packets.c  test_proxy_integration.py  test_rust_binary_parity.py  test_rust_runtime_migration.py  test_rust_runtime_subset.py
tools/ralph-loop/: README.md
(+30 files in other folders)
