[package]
name = "ciadpi-bin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ciadpi-config = { path = "../ciadpi-config" }
ciadpi-desync = { path = "../ciadpi-desync" }
ciadpi-packets = { path = "../ciadpi-packets" }
ciadpi-session = { path = "../ciadpi-session" }

[[bin]]
name = "ciadpi-rs"
path = "src/main.rs"
